--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,40 @@
 <div class="container">
+  <div class="col">
+    <h3>{{ title }}</h3>
+  </div>
+  <hr />
+  <form class="form row">
+    <div class="form-group col-md-2">
+      <label for="Name" class="sr-only">Name</label>
+      <input
+        type="text"
+        name="Name"
+        id="name"
+        placeholder="Enter Name"
+        class="form-control"
+        [(ngModel)]="inputName"
+      />
+    </div>
+    <div class="form-group col-md-2">
+      <label for="lastName" class="sr-only">Last Name</label>
+      <input
+        type="text"
+        name="lastName"
+        id="lastName"
+        placeholder="Enter Last Name"
+        class="form-control"
+        [(ngModel)]="inputLastName"
+      />
+    </div>
+    <div class="col-md-2">
+      <button type="submit" class="btn btn-primary mt-4" (click)="addPerson()">
+        Add Person
+      </button>
+    </div>
+  </form>
+</div>
+<div class="container">
+  <hr>
   <div class="row">
     <div class="col">
       <div *ngFor="let person of person; let i = index">
