--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,1 +1,8 @@
-<p>person works!</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</div>
+    </div>
+  </div>
+</div>
