personData was changed for easily understanding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,6 @@
   <app-person
     [person]="personElement"
     [indice]="i"
-    *ngFor="let personElement of person; let i = index"
+    *ngFor="let personElement of personData; let i = index"
   ></app-person>
 </div>
