--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,35 +3,7 @@
     <h3>{{ title }}</h3>
   </div>
   <hr />
-  <form class="form row">
-    <div class="form-group col-md-2">
-      <label for="Name" class="sr-only">Name</label>
-      <input
-        type="text"
-        name="Name"
-        id="name"
-        placeholder="Enter Name"
-        class="form-control"
-        [(ngModel)]="inputName"
-      />
-    </div>
-    <div class="form-group col-md-2">
-      <label for="lastName" class="sr-only">Last Name</label>
-      <input
-        type="text"
-        name="lastName"
-        id="lastName"
-        placeholder="Enter Last Name"
-        class="form-control"
-        [(ngModel)]="inputLastName"
-      />
-    </div>
-    <div class="col-md-2">
-      <button type="submit" class="btn btn-primary mt-4" (click)="addPerson()">
-        Add Person
-      </button>
-    </div>
-  </form>
+  <app-form (personCreated)="PersonsAdded($event)"></app-form>
   <hr />
   <app-person
     [person]="personElement"
