--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,30 @@
 <p>form works!</p>
+<form class="form row">
+  <div class="form-group col-md-2">
+    <label for="Name" class="sr-only">Name</label>
+    <input
+      type="text"
+      name="Name"
+      id="name"
+      placeholder="Enter Name"
+      class="form-control"
+      [(ngModel)]="inputName"
+    />
+  </div>
+  <div class="form-group col-md-2">
+    <label for="lastName" class="sr-only">Last Name</label>
+    <input
+      type="text"
+      name="lastName"
+      id="lastName"
+      placeholder="Enter Last Name"
+      class="form-control"
+      [(ngModel)]="inputLastName"
+    />
+  </div>
+  <div class="col-md-2">
+    <button type="submit" class="btn btn-primary mt-4" (click)="addPerson()">
+      Add Person
+    </button>
+  </div>
+</form>
