--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -23,7 +23,7 @@
     />
   </div>
   <div class="col-md-2">
-    <button type="submit" class="btn btn-primary mt-4" (click)="addPerson(inputName,inputLastName)">
+    <button type="submit" class="btn btn-primary mt-4" (click)="addPerson()">
       Add Person
     </button>
   </div>
