--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h3>{{ title }}</h3>
   </div>
   <hr />
-  <app-form (personCreated)="PersonsAdded($event)"></app-form>
+  <app-form></app-form>
   <hr />
   <app-person
     [person]="personElement"
