--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,8 +1,8 @@
-
 <div class="container">
   <div class="row">
     <div class="col">
       <div>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</div>
+      <button class="btn btn-info" type="submit">Edit Content</button>
     </div>
   </div>
 </div>
