service information completed

--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col">
       <div>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</div>
-      <button class="btn btn-info" type="submit" (click)="emitGreeting()">Edit Content</button>
+      <button class="btn btn-info" type="submit" (click)="emitGreeting()">
+        Edit Content
+      </button>
     </div>
   </div>
 </div>
