html updated in person component html

--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,10 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</div>
-      <button class="btn btn-info" type="submit" (click)="emitGreeting()">
-        Edit Content
-      </button>
-    </div>
-  </div>
+<div class="item">
+  <input type="checkbox" (click)="emitGreeting()" />
+  <p>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</p>
 </div>
