--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,29 +1,19 @@
-<form class="form row">
-  <div class="form-group col-md-2">
-    <label for="Name" class="sr-only">Name</label>
-    <input
-      type="text"
-      name="Name"
-      id="name"
-      placeholder="Enter Name"
-      class="form-control"
-      #inputName
-    />
-  </div>
-  <div class="form-group col-md-2">
-    <label for="lastName" class="sr-only">Last Name</label>
-    <input
-      type="text"
-      name="lastName"
-      id="lastName"
-      placeholder="Enter Last Name"
-      class="form-control"
-      #inputLastName
-    />
-  </div>
-  <div class="col-md-2">
-    <button type="submit" class="btn btn-primary mt-4" (click)="addPerson()">
-      Add Person
-    </button>
-  </div>
+<form class="item">
+  <input
+    type="text"
+    name="Name"
+    id="name"
+    placeholder="Name"
+    [(ngModel)]="inputName"
+  />
+  <input
+    type="text"
+    name="lastName"
+    id="lastName"
+    placeholder="LastName"
+    [(ngModel)]="inputLastName"
+  />
+  <button type="submit" (click)="addPerson()">
+    +
+  </button>
 </form>
