--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
 <div class="box" id="heading">
   <h1>{{ title }}</h1>
 </div>
-<div class="box">
-  <app-person
-    [person]="personElement"
-    [indice]="i"
-    *ngFor="let personElement of personData; let i = index"
-  ></app-person>
-</div>
-
-<div class="box">
-  <app-form></app-form>
-</div>
+<app-personas></app-personas>
