person component updated, router implemented on list

--- a/src/app/personas/person/person.component.html
+++ b/src/app/personas/person/person.component.html
@@ -1,4 +1,9 @@
 <div class="item">
-  <input type="checkbox" (click)="emitGreeting()" />
-  <p>{{ indice + 1 }} : {{ person.name }} {{ person.lastName }}</p>
+  <ul>
+    <li>
+      <a [routerLink]="['/personas', indice]">
+        {{ person.name }} {{ person.lastName }}
+      </a>
+    </li>
+  </ul>
 </div>
