delete person logic added to personsService

--- a/src/app/personas/form/form.component.html
+++ b/src/app/personas/form/form.component.html
@@ -17,7 +17,7 @@
       required
     />
     <button type="submit" style="cursor: pointer">+</button>
-    <button *ngIf="index != null" type="submit" style="cursor: pointer" class="buttonRed">
+    <button *ngIf="index != null" type="submit" style="cursor: pointer" class="buttonRed" (click)="deletePerson()">
       -
     </button>
   </form>
