--- a/src/app/personas/person/person.component.html
+++ b/src/app/personas/person/person.component.html
@@ -1,7 +1,7 @@
 <div class="item">
   <ul>
     <li>
-      <a [routerLink]="['/personas', indice]">
+      <a [routerLink]="['/personas', indice]" [queryParams]="{ editMode: '1' }">
         {{ person.name }} {{ person.lastName }}
       </a>
     </li>
